--- a/Psychotype_HSE/Views/Home/Index.cshtml
+++ b/Psychotype_HSE/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿@using Psychotype_HSE.Models
+@model PageDataModel
+
 @{
     Layout = null;
     ViewBag.Title = "DefaultTemplate";
@@ -25,123 +27,154 @@
         }
     </style>
 
-    <link rel="stylesheet" type="text/css" href="~/Content/Template/src/css/index.css">
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/Template/src/css/index.css")">
 
 
     </head>
-    <body>
+<body>
 
-        <div class="logobox">
-            <a class="logo">PHSE'19</a>
+    <div class="logobox">
+        <a class="logo">PHSE'19 @{if (Model != null) {@Model.Id }} </a>
+    </div>
+    @using (Html.BeginForm("MostPopularWords", "Home", FormMethod.Post))
+    {
+
+    <nav class="searchbar">
+
+        @Html.TextBoxFor(m => m.Id, new { style = "padding: 0px", name = "id", placeholder = "Введите id...", @class = "searchline" })
+        @Html.ValidationMessageFor(m => m.Id)
+        <!--input class="searchline" name="id" type="search" placeholder="Введите id..." aria-label="Search"-->
+
+        <button class="searchbutton" type="submit">
+            <img src="~/Content/Template/src/img/palm-scan.png" width="25" height="25" alt="submit" />
+        </button>
+
+    </nav>
+    }
+    <div class="data">
+        <div class="contblock" id="Latency">
+            <div class="contdescr">
+                <img src="~/Content/Template/src/img/graph.png" style="position: absolute; margin-left: 15px;" />
+                <div>
+                    <h3>Частота появления слов</h3>
+                </div>
+                <button class="hidebutton" type="submit">
+                    <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
+                </button>
+            </div>
+            <div class="contdata"></div>
         </div>
 
-        <nav class="searchbar">
-            <input class="searchline" type="search" placeholder="Введите id..." aria-label="Search">
-
-            <button class="searchbutton" type="submit">
-                <img src="~/Content/Template/src/img/palm-scan.png" width="25" height="25" alt="submit" />
-            </button>
-        </nav>
-
-        <div class="data">
-            <div class="contblock" id="Latency">
-                <div class="contdescr">
-                    <img src="~/Content/Template/src/img/graph.png" style="position: absolute; margin-left: 15px;" />
-                    <div>
-                        <h3>Частота появления слов</h3>
-                    </div>
-                    <button class="hidebutton" type="submit">
-                        <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
-                    </button>
+        <div class="contblock" id="Test">
+            <div class="contdescr">
+                <img src="~/Content/Template/src/img/test_partial_passed1600.png" style="position: absolute; margin-left: 15px;" />
+                <div>
+                    <h3>Типология Майерс-Бриггс</h3>
                 </div>
-                <div class="contdata"></div>
+                <button class="hidebutton" type="submit">
+                    <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
+                </button>
             </div>
+            <div class="contdata"></div>
+        </div>
 
-            <div class="contblock" id="Test">
-                <div class="contdescr">
-                    <img src="~/Content/Template/src/img/test_partial_passed1600.png" style="position: absolute; margin-left: 15px;" />
-                    <div>
-                        <h3>Типология Майерс-Бриггс</h3>
-                    </div>
-                    <button class="hidebutton" type="submit">
-                        <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
-                    </button>
+        <div class="contblock" id="Rare">
+            <div class="contdescr">
+                <img src="~/Content/Template/src/img/latency.png" style="position: absolute; margin-left: 15px;" />
+                <div>
+                    <h3>Самые популярные слова</h3>
                 </div>
-                <div class="contdata"></div>
+                <button class="hidebutton" type="submit">
+                    <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
+                </button>
             </div>
-
-            <div class="contblock" id="Rare">
-                <div class="contdescr">
-                    <img src="~/Content/Template/src/img/latency.png" style="position: absolute; margin-left: 15px;" />
-                    <div>
-                        <h3>Самые популярные слова</h3>
-                    </div>
-                    <button class="hidebutton" type="submit">
-                        <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
-                    </button>
-                </div>
-                <div class="contdata"></div>
+            <div class="contdata">
+                @if (Model != null)
+                {
+                <ol>
+                    @foreach (Tuple<String, List<String>> item in Model.PopularWords.response)
+                    {
+                    <li>
+                        <p>@item.Item1</p>
+                        <div>
+                            <ul>
+                                @foreach (String word in item.Item2)
+                                {
+                                String link = PageDataModel.PopularWordsAtributes.dictLink + word;
+                                <li>
+                                    <a href="@link">
+                                        @word
+                                    </a>
+                                </li>
+                                }
+                            </ul>
+                        </div>
+                    </li>
+                    }
+                </ol>
+                }
             </div>
+        </div>
 
-            <div class="contblock" id="Type">
-                <div class="contdescr">
-                    <img src="~/Content/Template/src/img/robo-logo-black.png" style="
+        <div class="contblock" id="Type">
+            <div class="contdescr">
+                <img src="~/Content/Template/src/img/robo-logo-black.png" style="
                             position: absolute;
         margin-left: 11px;
         height: 55px;
         width: 55px;
         margin-top: -2px;    margin-bottom: 150px;" />
-                    <div>
-                        <h3>Оценка типа аккаунта</h3>
-                    </div>
-                    <button class="hidebutton" type="submit">
-                        <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
-                    </button>
+                <div>
+                    <h3>Оценка типа аккаунта</h3>
                 </div>
-                <div class="contdata"></div>
+                <button class="hidebutton" type="submit">
+                    <img src="~/Content/Template/src/img/expand_arrow1600.png" alt="hide-btn" />
+                </button>
             </div>
-
-        </div>
-        <div class="info">
-            <div class="contdescr"><h3 style="margin-left: 35px;">Информация профиля</h3></div>
+            <div class="contdata"></div>
         </div>
 
+    </div>
+    <div class="info">
+        <div class="contdescr"><h3 style="margin-left: 35px;">Информация профиля</h3></div>
+    </div>
 
-        <div class="nav">
-            <div class="navbuttons">
-                <div class="buttongroup">
-                    <button class="navbutton" onclick=" window.location.href='#Latency'">
-                        <img src="~/Content/Template/src/img/graph.png" />
-                        <h3>Частоты слов</h3>
-                    </button>
 
-                    <button class="navbutton" onclick=" window.location.href='#Test'">
-                        <img src="~/Content/Template/src/img/test_partial_passed1600.png">
-                        <h3>Типология</h3>
-                    </button>
-                    <button class="navbutton" onclick=" window.location.href='#Rare'">
-                        <img src="~/Content/Template/src/img/latency.png" />
-                        <h3>Популярные</h3>
-                    </button>
-                    <button class="navbutton" onclick=" window.location.href='#Type'">
-                        <img src="~/Content/Template/src/img/robo-logo-black.png" style="
+    <div class="nav">
+        <div class="navbuttons">
+            <div class="buttongroup">
+                <button class="navbutton" onclick=" window.location.href='#Latency'">
+                    <img src="~/Content/Template/src/img/graph.png" />
+                    <h3>Частоты слов</h3>
+                </button>
+
+                <button class="navbutton" onclick=" window.location.href='#Test'">
+                    <img src="~/Content/Template/src/img/test_partial_passed1600.png">
+                    <h3>Типология</h3>
+                </button>
+                <button class="navbutton" onclick=" window.location.href='#Rare'">
+                    <img src="~/Content/Template/src/img/latency.png" />
+                    <h3>Популярные</h3>
+                </button>
+                <button class="navbutton" onclick=" window.location.href='#Type'">
+                    <img src="~/Content/Template/src/img/robo-logo-black.png" style="
                             height: 55px;
                             width: 55px;" />
-                        <h3 style="margin-left: 20px; margin-top: 9px;">Тип</h3>
-                    </button>
-                    <button class="navbutton" onclick="document.getElementsByClassName('searchline')[0].focus()">
-                        <img src="~/Content/Template/src/img/palm-scan.png" />
-                        <h3>Поиск</h3>
-                    </button>
-                </div>
-                <div class="image">
+                    <h3 style="margin-left: 20px; margin-top: 9px;">Тип</h3>
+                </button>
+                <button class="navbutton" onclick="document.getElementsByClassName('searchline')[0].focus()">
+                    <img src="~/Content/Template/src/img/palm-scan.png" />
+                    <h3>Поиск</h3>
+                </button>
+            </div>
+            <div class="image">
 
-                </div>
             </div>
         </div>
+    </div>
 
 
-    </body>
+</body>
 
     <script src="~/Content/Template/src/js/script.js"></script>
 </html>
