--- a/Psychotype_HSE/Content/Template/src/css/index.css
+++ b/Psychotype_HSE/Content/Template/src/css/index.css
@@ -9,6 +9,22 @@
                                   supported by Chrome and Opera */
 }
 
+h4, p {
+    font-family: Andika, Tahoma;
+    font-color: black;
+    margin-right: 30px;
+    margin-left: 30px;
+    margin-bottom: 0px;
+}
+
+h4 {
+    font-size: 22px;
+}
+
+p {
+    font-size: 18px;
+}
+
 div{
  	display: inline-block;
  	margin: 0;
@@ -145,7 +161,7 @@ input:focus{
 	text-align: left;
 }
 
-h1,h2,h3,h4
+h1,h2,h3
 {
 	color: white;
  	font-family: BeerMoney;
@@ -324,13 +340,11 @@ h1,h2,h3,h4
 
 /* Style the collapsible content. Note: hidden by default */
 .contdata {
-
-	min-height: 400px;
-	width: auto;
-
-  padding: 1px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
-  transition: max-height 0.2s ease-out;
+    min-height: 120px;
+    width: auto;
+    display: block;
+    padding: 1px;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    transition: max-height 0.2s ease-out;
 }
