Suicide analysis added to interface

--- a/Psychotype_HSE/Views/Home/Index.cshtml
+++ b/Psychotype_HSE/Views/Home/Index.cshtml
@@ -139,21 +139,58 @@
             </div>
             <div class="contdata" style="display: block;">
                 @if (Model != null && PageDataModel.isLinkValid)
-                {
-                    double prob = PageDataModel.BotProbability;
-                    <h4>
-                        @if (prob > 0.5)
-                        {
-                            @:Аккаунт не является персональной страницей настоящего человека с высокой вероятностью.
+    {
+        double prob = PageDataModel.BotProbability;
+        double suic = PageDataModel.SuicideProbability;
+
+            <h4>
+                Вероятность того, что эта страница - бот: @string.Format("{0:f2}", prob);
+            </h4>
+            if (prob > 0.5)
+{
+            <p>
+                Аккаунт не является персональной страницей настоящего человека с высокой вероятностью.
+            </p>
+}
+else
+{
+            <p>
+                Скорее всего аккаунт является персональной страницей настоящего человека.
+            </p>
+}
+                    if (PageDataModel.HasWords)
+                    {
+
+                    
+            <h4>
+                Вероятность наличия суицидальных наклонностей у пользователя: @string.Format("{0:f2}",suic)
+            </h4>
+                    
+                    if (suic > 0.2)
+                    {
+                       <p>
+                           Такой уровень показателя может свидетельствовать об опасности для пользователя,
+                           и являться причиной для обращения за квалифицированной помощью. 
+                       </p>
+                    }
+                    else
+                    {
+                        <p>
+                            Содержание постов пользователя не выражает суицидальных наклонностей и имеет в целом нейтральный окрас.
+                        </p>
                         }
-                        else
-                        {
-                            @:Скорее всего аккаунт является персональной страницей настоящего человека.
-                        }
-                    </h4>
-                    <p>
-                        Вероятность того, что эта страница - бот: @string.Format("{0:f2}", prob);
-                    </p>
+                    }
+                    else
+                    {
+                        <h4>Невозможно предсказать суицидальные наклонности. Нет общедоступных данных.</h4>
+                    }
+                        <p>
+                            Анализ суицидальных наклонностей проводится на основании содержания текстов на странице с использованием технологии глубокого обучения.
+                        </p>
+
+                }
+
+
                 }
             </div>
         </div>
